@@ -1,5 +1,6 @@
 from Products.CMFCore.utils import getToolByName
-from plone.app.layout.navigation.defaultpage import DefaultPage as BaseDefaultPage
+from plone.app.layout.navigation.defaultpage import DefaultPage as \
+        BaseDefaultPage
 
 from Products.LinguaPlone.interfaces import ITranslatable
 
@@ -8,13 +9,9 @@ class DefaultPage(BaseDefaultPage):
 
     def getDefaultPage(self):
         """Get the translation of the folder default page in current language
-        if folder is neutral
         """
         default_page = super(DefaultPage, self).getDefaultPage()
         if not default_page:
-            return default_page
-
-        if self.context.Language():
             return default_page
 
         page = self.context[default_page]
@@ -31,7 +28,8 @@ class DefaultPage(BaseDefaultPage):
             return True
 
         if ITranslatable.providedBy(obj):
-            for translation in obj.getTranslations(review_state=False).values():
+            for translation in obj.getTranslations(
+                review_state=False).values():
                 if translation.getId() == default_page:
                     return True
 
